Mise en forme de la partie Piece

--- a/front/src/styles/List.css
+++ b/front/src/styles/List.css
@@ -3,7 +3,7 @@ h1 {
   text-align: center;
 }
 
-.building-list {
+.building-list, .pieces-list {
   display: flex;
   justify-content: center;
   align-items: center;
