--- a/front/src/styles/Item.css
+++ b/front/src/styles/Item.css
@@ -1,4 +1,4 @@
-.building-item {
+.building-item, .piece-item {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -13,7 +13,7 @@
   padding: 15px;
 }
 
-.building-item:hover {
+.building-item:hover,  .piece-item:hover {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
 }
 
